# project-manager

./: .gitignore  HANDOFF.md  LICENSE  README.md  export.sh  install.sh  mise.toml
mock-app/: package-lock.json  package.json
mock-app/appkit-bench/: Package.swift
mock-app/appkit-bench/Sources/AppKitBench/: main.swift
mock-app/docs/: tauri-rebuild-requirements.md
mock-app/iced-bench/: Cargo.toml
mock-app/iced-bench/src/: main.rs
mock-app/tauri-bench/: index.html  package.json  settings.html  vite.config.ts
mock-app/tauri-bench/src/: main.ts  settings.css  settings.ts  styles.css
mock-app/tauri-bench/src-tauri/: Cargo.toml  tauri.conf.json
mock-app/tauri-bench/src-tauri/src/: lib.rs  main.rs
mock-app/tools/: archive_metrics.mjs  build_appkit.mjs  build_tauri.mjs  build_wails.mjs  bundle_iced.mjs  generate_fixtures.mjs  rss_snapshot.mjs  summarize_metrics.mjs  test_tauri_keyboard.mjs
mock-app/wails-bench/: Taskfile.yml  benchservice.go  go.mod  go.sum  hotkey_darwin.go  hotkey_other.go  main.go
mock-app/wails-bench/frontend/: index.html  package.json
mock-app/wails-bench/frontend/bindings/dev.projectlauncher/wailsbench/: benchservice.js  index.js  models.js
mock-app/wails-bench/frontend/bindings/github.com/wailsapp/wails/v3/internal/: eventcreate.js  eventdata.d.ts
mock-app/wails-bench/frontend/src/: main.js  style.css
mock-app/wails-bench/resources/: projects.json
tui-bench/: Cargo.toml  README.md
tui-bench/src/: main.rs
tui-bench/src/config/: mod.rs  models.rs  storage.rs
tui-bench/src/ui/: app.rs  mod.rs  screens.rs
