[package]
name = "pm"
version = "0.1.0"
edition = "2021"
description = "TUI project manager for quick project addition and management"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
