[package]
name = "iced-bench"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "IcedBench"
path = "src/main.rs"

[dependencies]
dirs = "6.0.0"
global-hotkey = "0.8.0"
iced = { version = "0.14.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
